# motion_primitive_planning

./: CMakeLists.txt  README.md  mpp_plugin.xml  package.xml
config/: test.rviz
gazebo/match_robotics/src/match_mobile_robotics/match_gazebo/launch/: match_world_common.launch
gazebo/match_robotics/src/match_mobile_robotics/mir/mir_examples/launch/: single_mir_100.launch
gazebo/match_robotics/src/match_mobile_robotics/mir/mir_examples/rviz/: single_mir_visualization.rviz
gazebo/match_robotics/src/match_mobile_robotics/mir/mir_launch_sim/launch/: mir_100.launch
gazebo/match_robotics/src/match_mobile_robotics/submodules/match_robot_controllers/formation_controller/config/: decentralized_leader_follower_control.yaml  formation_controller_config.yaml
gazebo/match_robotics/src/match_mobile_robotics/submodules/match_robot_controllers/formation_controller/launch/: decentralized_leader_follower_control.launch  formation_controller_complete.launch
gazebo/match_robotics/src/match_mobile_robotics/submodules/match_robot_controllers/formation_controller/scripts/: decentralized_leader_follower_control.py  formation_controller_node.py  state_machine.py
gazebo/match_robotics/src/match_mobile_robotics/submodules/match_robot_controllers/virtual_leader/config/: set_leader_pose.yaml
gazebo/match_robotics/src/match_mobile_robotics/submodules/match_robot_controllers/virtual_leader/launch/: move_to_leader_pose.launch  set_leader_pose.launch
gazebo/match_robotics/src/match_mobile_robotics/submodules/match_robot_controllers/virtual_leader/scripts/: set_leader_pose.py
gazebo/worlds/: corner.world
include/liom_local_planner/: coarse_path_planner.h  environment.h  lightweight_nlp_problem.h  liom_local_planner.h  liom_local_planner_ros.h  optimizer_interface.h  planner_config.h  time.h  vehicle_model.h  yaml_all.h
include/liom_local_planner/math/: generate_obs.h  pose.h
include/traj_tracking/: fg_test.h  generate_vertex.h
launch/sarah_simulation/: compute_optimal_traj.launch  sarah_traj_tracking.launch  visualize.launch  visualize_real.launch
src/: yaml.cpp
src/formation_planning/: coarse_path_planner.cpp  environment.cpp  lightweight_nlp_problem.cpp  liom_local_planner.cpp  liom_local_planner_ros.cpp  liom_test_node.cpp
src/sarah_simulation/: compute_optimal_traj.cpp  traj_tracking.cpp  visualize.cpp  visualize_real.cpp
